--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <input type="file" id="image-upload" accept="image/*" />
     <div id="image-preview"></div>
     <input type="color" id="color-picker" value="#ffffff" />
-
+    <div id="color-wheel"></div>
+    <input type="hidden" id="color-picker" value="#ffffff">
     <script src="./script/app.js"></script>
   </body>
 </html>
