--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
     <title>Document</title>
   </head>
   <body>
-    <input type="file" id="image-upload" accept="image/*" />
-    <div id="image-preview"></div>
-    <input type="color" id="color-picker" value="#ffffff" />
-    <div id="color-wheel"></div>
-    <input type="hidden" id="color-picker" value="#ffffff">
+    <input type="file" id="image-upload" />
+    <div
+      id="image-preview"
+      style="width: 400px; height: 400px; border: 1px solid black"
+    ></div>
+    <input type="color" id="color-picker" />
+    <div
+      id="color-wheel"
+      style="
+        width: 400px;
+        height: 400px;
+        border: 1px solid black;
+        position: relative;
+      "
+    >
+      <div
+        id="color-dot"
+        style="
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          background-color: black;
+          position: absolute;
+        "
+      ></div>
+    </div>
     <script src="./script/app.js"></script>
   </body>
 </html>
