--- a/index.html
+++ b/index.html
@@ -7,32 +7,15 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Image Color Picker</h1>
     <input type="file" id="image-upload" />
-    <div
-      id="image-preview"
-      style="width: 400px; height: 400px; border: 1px solid black"
-    ></div>
+    <div id="image-preview"></div>
     <input type="color" id="color-picker" />
-    <div
-      id="color-wheel"
-      style="
-        width: 400px;
-        height: 400px;
-        border: 1px solid black;
-        position: relative;
-      "
-    >
-      <div
-        id="color-dot"
-        style="
-          width: 20px;
-          height: 20px;
-          border-radius: 50%;
-          background-color: black;
-          position: absolute;
-        "
-      ></div>
+    <div id="color-wheel">
+      <div id="color-dot"></div>
     </div>
+    <p id="selected-color"></p>
+
     <script src="./script/app.js"></script>
   </body>
 </html>
