custom file input

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   </head>
   <body>
     <h1>Image Color Picker</h1>
-    <input type="file" id="image-upload" />
-    <div id="image-preview"></div>
-    <input type="color" id="color-picker" />
-    <div id="color-wheel">
-      <div id="color-dot"></div>
+    <div class="core-section">
+      <input type="file" id="image-upload" />
+      <label for="image-upload" class="custom-file-upload">Browse</label>
+
+      <div id="image-preview"></div>
+      <input type="color" id="color-picker" />
+      <div id="color-wheel">
+        <div id="color-dot"></div>
+      </div>
     </div>
     <p id="selected-color"></p>
 
