--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <h1>Image Color Picker</h1>
     <div class="core-section">
       <input type="file" id="image-upload" />
-      <label for="image-upload" class="custom-file-upload">Browse</label>
-
+      <label for="image-upload" class="custom-file-upload"
+        >Browse
+      </label>
       <div id="image-preview"></div>
-      
+
       <div id="color-wheel">
         <div id="color-dot"></div>
       </div>
     </div>
+    <p id="no-image-selected" class="centered-text">browse the image, clicking on button "Browse"</p>
     <input type="color" id="color-picker" />
     <p id="selected-color"></p>
 
