copy button style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       browse the image, clicking on button "Browse"
     </p>
     <input type="color" id="color-picker" />
-    <div>
+    <div class="flex">
       <p id="selected-color"></p>
       <button id="copy-color-btn">Copy</button>
     </div>
