--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="./assets/color-wheel.png">
+    <title>Color Picker</title>
   </head>
   <body>
     <h1>Image Color Picker</h1>
