convert color buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="icon" type="image/x-icon" href="./assets/color-wheel.png">
+    <link rel="icon" type="image/x-icon" href="./assets/color-wheel.png" />
     <title>Color Picker</title>
   </head>
   <body>
@@ -25,6 +25,10 @@
     <div class="flex hide">
       <p id="selected-color"></p>
       <button id="copy-color-btn">Copy</button>
+      <button id="rgb-btn" class="format-btn">RGB</button>
+      <button id="hex-btn" class="format-btn">HEX</button>
+      <button id="hsl-btn" class="format-btn">HSL</button>
+      <button id="cmyk-btn" class="format-btn">CMYK</button>
     </div>
 
     <script src="./script/app.js"></script>
